{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 21,
  "lineage": "2afead51-7a62-cce4-d14c-76273d285551",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-844e0bf7",
            "arn": "arn:aws:ec2:eu-west-1:772140966692:instance/i-0a0fa45c9cb767490",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a0fa45c9cb767490",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-04b76c0c024c72c35",
            "private_dns": "ip-10-0-1-149.eu-west-1.compute.internal",
            "private_ip": "10.0.1.149",
            "public_dns": "ec2-52-17-17-201.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.17.17.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0d54c209e6700ff5f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090430fcf73fcd8ae",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07d6611b2b78ee525"
            ]
          },
          "depends_on": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03c84cf45446af5e5",
            "owner_id": "772140966692",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-08593dbcc93ceae5d"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ea3a7b9127e9d52e",
            "owner_id": "772140966692",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c84cf45446af5e5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-08593dbcc93ceae5d"
          },
          "depends_on": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018d69303de6d1398",
            "route_table_id": "rtb-0ea3a7b9127e9d52e",
            "subnet_id": "subnet-090430fcf73fcd8ae"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0922fa83529ef38f6",
            "route_table_id": "rtb-0ea3a7b9127e9d52e",
            "subnet_id": "subnet-0b44bdd4f4eb94b47"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cde81be4043a1eb8",
            "route_table_id": "rtb-0ea3a7b9127e9d52e",
            "subnet_id": "subnet-0fad03d420e832fe0"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:772140966692:security-group/sg-07d6611b2b78ee525",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d6611b2b78ee525",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "772140966692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-08593dbcc93ceae5d"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:772140966692:subnet/subnet-007533e53e36bc19e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-007533e53e36bc19e",
            "map_public_ip_on_launch": false,
            "owner_id": "772140966692",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-08593dbcc93ceae5d"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:772140966692:subnet/subnet-0dcac434aa66cd5dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0dcac434aa66cd5dd",
            "map_public_ip_on_launch": false,
            "owner_id": "772140966692",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-08593dbcc93ceae5d"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:772140966692:subnet/subnet-0722187e75b5d1f98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0722187e75b5d1f98",
            "map_public_ip_on_launch": false,
            "owner_id": "772140966692",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-08593dbcc93ceae5d"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:772140966692:subnet/subnet-090430fcf73fcd8ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-090430fcf73fcd8ae",
            "map_public_ip_on_launch": true,
            "owner_id": "772140966692",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-08593dbcc93ceae5d"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:772140966692:subnet/subnet-0b44bdd4f4eb94b47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b44bdd4f4eb94b47",
            "map_public_ip_on_launch": true,
            "owner_id": "772140966692",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-08593dbcc93ceae5d"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:772140966692:subnet/subnet-0fad03d420e832fe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0fad03d420e832fe0",
            "map_public_ip_on_launch": true,
            "owner_id": "772140966692",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-08593dbcc93ceae5d"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:772140966692:vpc/vpc-08593dbcc93ceae5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0538ce72575918cde",
            "default_route_table_id": "rtb-08b743d8cbd44a388",
            "default_security_group_id": "sg-09c26a15aa41e7e1f",
            "dhcp_options_id": "dopt-53e49035",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08593dbcc93ceae5d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08b743d8cbd44a388",
            "owner_id": "772140966692",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}